Improved argument parsing and using node